<resources>
    <string name="app_name">courses</string>
    <string name="home">Home</string>
    <string name="classes">Classes</string>
    <string name="homework">Homework</string>
    <string name="rating">Rating</string>
    <string name="hi_user">Hi, <b>User!</b></string>
    <string name="dots">:</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="timer_placeholder">0</string>
    <string name="open_in">Open in</string>
    <string name="today_date">Today: %1$s</string>
    <string name="classes_today">%1$d classes today</string>
    <string name="next_practice_work">Next practice work:</string>
    <string name="days_left">%1$d days left</string>
    <string name="icon_search">Search icon</string>
    <string name="icon_filter">Filter icon</string>
    <string name="user_avatar">User avatar</string>
    <string name="no_classes_today">No classes today</string>
</resources>